# itm-ai-helpdesk

./: .gitignore  Makefile  README.md  dane.txt  pyproject.toml
.github/workflows/: workflow.yaml
backend/: manage.py
backend/api/: views.py
backend/errors/: views.py
backend/service/: settings.py  urls.py
backend/static/css/: styles.css
backend/static/js/: excel_upload.js  script.js
backend/templates/: index.html  upload_excel.html
model/sklearn/: model.py  stopwords.json
model/sklearn/metadata/: metadata.py
resources/: corrections.json  output.json  stopwords.json
resources/backups/: Szablon_HD_AI_20250525_021736.xlsx  Szablon_HD_AI_20250607_191758.xlsx  active.txt
tests/: test_converter.py  test_correcter.py  test_model.py  test_scripts.py
utils/: converter.py  correcter.py  corrections.py  excel_extractor.py  install.md
