[project]
name = "spell-altar"
version = "0.2.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.9.2)",
    "pytest (>=8.3.4)",
    "structlog (>=25.1.0)",
    "python-dotenv (>=1.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


