[project]
name = "spell-altar"
version = "0.3.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.9.2)",
    "pytest (>=8.3.4)",
    "structlog (>=25.1.0)",
    "python-dotenv (>=1.0.1)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


